--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --pink: #ffcccc;
   --orange: #ff9f1a;
   --white: #fff;
-  --black: rgb(0, 0, 0);
+  --black: #212121;
   --blue: #4d7cfe;
   --red: #e00303;
 }
@@ -27,5 +27,5 @@ button {
 }
 
 button:disabled {
-  background-color: gray;
+  background-color: #d6d6d6;
 }
