--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@ body {
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 button {
   border: none;
   border-radius: 10px;
