feat:  add post with form data

--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,12 @@ a {
 a:visited {
   color: inherit;
 }
+
+input[type="file"] {
+  position: absolute;
+  width: 0;
+  height: 0;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+}
