--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,9 @@ body {
   box-sizing: border-box;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
-}
+} */
 
 button {
   border: none;
