--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,55 @@
     --skeleton: #e5e5e5;
 }
 
+.App {
+    font-family: 'Ubuntu', sans-serif;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow-y: auto;
+}
+
+#light {
+    background-color: #f3ebf6;
+}
+
+#dark {
+    background-color: #46045e;
+}
+
+#light .main {
+    background-color: #fff;
+    color: #8c55aa;
+}
+
+#dark .main {
+    background-color: #38004c;
+    color: #ffffff;
+}
+
+.switch {
+    display: flex;
+    width: 100vw;
+    height: 100px;
+    justify-content: center;
+    align-items: center;
+}
+
+.switch label {
+    margin: 10px;
+}
+
+#light .switch label {
+    color: black;
+}
+
+#dark .switch label {
+    color: white;
+}
+
 body {
     margin: 0;
     padding: 0;
