--- a/src/shared/DarkMode/DarkMode.css
+++ b/src/shared/DarkMode/DarkMode.css
@@ -1,5 +1,5 @@
 #darkMode {
-    background: transparent url('assets/img/Moon.png') no-repeat center;
+    background: transparent url('assets/img/Moon.webp') no-repeat center;
     background-size: 30px 30px;
     width: 45px;
     height: 45px;
