--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
-}
+} */
 
 button {
   border: none;
