--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
 :root {
-  --gray: #555555;
+  --gray-1: #ebebeb;
+  --gray-3: #dadada;
+  --gray-5: #bfbfbf;
+  --gray-7: #555555;
+  --gray-10: #2c2825;
+  --green: #55977a;
   --white: #fff;
   --black: #212121;
   --brown: #665547;
   --gradient: #1e1818;
-  --goalShotButton: #2c2825;
+
   --skeleton: #e5e5e5;
 }
 
