--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 :root {
+  --gary-0: #f7f7f7;
   --gray-1: #ebebeb;
   --gray-3: #dadada;
   --gray-5: #bfbfbf;
@@ -10,7 +11,6 @@
   --brown: #665547;
   --brown-3: #956c4a;
   --gradient: #1e1818;
-
   --skeleton: #e5e5e5;
 }
 
@@ -18,9 +18,6 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: #151616;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 ::-webkit-scrollbar {
@@ -34,7 +31,7 @@ button {
 }
 
 button:disabled {
-  background-color: #d6d6d6;
+  background-color: var(--gray-3);
 }
 
 a {
