--- a/src/pages/Status/styles.css
+++ b/src/pages/Status/styles.css
@@ -1,6 +1,6 @@
 .swiper {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   margin-left: auto;
   margin-right: auto;
 }
@@ -32,14 +32,14 @@
   object-fit: cover;
 }
 
+.swiper-pagination {
+  bottom: 5% !important;
+}
+
 span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: var(--gray-10);
   width: 10px;
   height: 10px;
-}
-
-span.swiper-pagination-bullet {
-  display: none;
 }
 
 /* target all bullets */
