fix: Splash Scene Responsive

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --gray-1: #ebebeb;
   --gray-3: #dadada;
   --gray-5: #bfbfbf;
+  --gray-6: #adadad;
   --gray-7: #555555;
   --gray-10: #2c2825;
   --green: #55977a;
