--- a/src/pages/Status/styles.css
+++ b/src/pages/Status/styles.css
@@ -1,7 +1,7 @@
 .swiper {
   position: relative;
   width: 100%;
-  height: 100%;
+  max-height: 1000px !important;
   margin-left: auto;
   margin-right: auto;
 }
